Bug 11065 - [DllTool] DLL name from DEF file is ignored when using --output-exp option
Summary: [DllTool] DLL name from DEF file is ignored when using --output-exp option
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.21
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-08 21:26 UTC by Dmitry Gorbachev
Modified: 2010-12-01 14:38 UTC (History)
4 users (show)

See Also:
Host:
Target: i686-pc-mingw32
Build:
Last reconfirmed:


Attachments
Proposed patch (546 bytes, patch)
2009-12-08 21:27 UTC, Dmitry Gorbachev
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Gorbachev 2009-12-08 21:26:38 UTC
When --output-exp is given, def_name() and def_library() functions ignore a DLL
name given by NAME or LIBRARY commands in a DEF file.
Comment 1 Dmitry Gorbachev 2009-12-08 21:27:21 UTC
Created attachment 4451 [details]
Proposed patch
Comment 2 Sourceware Commits 2010-12-01 14:15:11 UTC
CVSROOT:	/cvs/src
Module name:	src
Changes by:	ktietz@sourceware.org	2010-12-01 14:15:06

Modified files:
	binutils       : ChangeLog dlltool.c 

Log message:
	2010-12-01  Kai Tietz  <kai.tietz@onevision.com>
	
	PR binutils/11065
	* dlltool.c (dll_name_set_by_exp_name): New variable.
	(def_name): Allow setting of dll_name by .def file.
	(def_library): Likewise.
	(main): Set dll_name_set_by_exp_name, if dll_name is
	set indirect by exp_name.

Patches:
http://sourceware.org/cgi-bin/cvsweb.cgi/src/binutils/ChangeLog.diff?cvsroot=src&r1=1.1722&r2=1.1723
http://sourceware.org/cgi-bin/cvsweb.cgi/src/binutils/dlltool.c.diff?cvsroot=src&r1=1.101&r2=1.102
Comment 3 Kai Tietz 2010-12-01 14:38:24 UTC
Fixed on head