2010-12-01  Kai Tietz  <kai.tietz@onevision.com>

PR binutils/11065
       * dlltool.c (dll_name_set_by_exp_name): New variable.
       (def_name): Allow setting of dll_name by .def file.
       (def_library): Likewise.
       (main): Set dll_name_set_by_exp_name, if dll_name is
       set indirect by exp_name.